2012-07-24 Roman
- FIX:Archive: Trend's build function is some fixed for horizontal scale calculation.


2012-07-23 Roman
- DAQ.ModBus: Asynchronous writings queue clear at start is added. Resource alloc at clear is fixed.


2012-07-22 Roman
- DAQ.ModBus: Asynchronous write mode is realized.
- FIX:XMLNode: Digits using for attributes name set.
- DAQ: Type parameters using as specific container is added at first, by inherit allow by new function TTipDAQ::tpParmAdd().
- !:DAQ.Comedi: First realization for simple pool AI, AO, DI, DO and DIO, without configuring yet is added.
- !!:DAQ.ICP_DAS: The module is separated to three parts "LP_8x" (LP-8000, I-8000 parallel bus), "87x" (I-8700, I-7000 serial bus) and
    "ISA" (ISA DAQ boards) for further unification and expanding different parts.
    Simple ISA DIO is expanded for support boards: "DIO-48", "DIO-96" and "DIO-144" (tested).
- DAQ.System: DA.SmartHDD is updated for miss utility "smartctl" warnings prevent.
- FIX:UI.WebCfgD: Editable combobox fixed for drop-down list and size is expanded to 50 symbols.


2012-07-20 Roman
- !!:FIX:Archive: No clear used archivators list on archive's object stop is fixed.
    Force archive detach from archivators at it remove for left and next crash prevent.
    Prevent attach archivators to stopped archive.
- DAQ.{AMRDevs,DAQGate,ModBus}: Lower border for "TM_REST" is set to "1".
- DAQ.{BlockCalc,DiamondBoards,JavaLikeCalc,LogicLev,Siemens}: Set buffer period for created archive to Active archiving task period,
    for Active mode archiving sources.
- DAQ.{DCON,ICP_DAS}: Default archivation mode is changed to "Passive" mode.


2012-07-19 Roman
- DB.MySQL: Some fields type processing is added and changed for getting table structure function.
- !:FIX:DAQ: Value into Object's type set to string is fixed by recursion prevent.


2012-07-18 Roman