@@ -1,3 +1,7 @@
+2012-07-25 Roman
+- !!!!:FIX:XMLNodeObj: Parent link storing is changed to direct pointer for prevent self lock, allow remove and exclude memory leak.
+
+
 2012-07-24 Roman
 - FIX:Archive: Trend's build function is some fixed for horizontal scale calculation.
 
